--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8"/>
   	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="google-site-verification" content="iKvnErHFc8aNvF0WDiVPuRJcuMRMHpK_MttSQTQY-0c" />
     <title>Merapi Costa Rica</title>
     <style>
     	img{
